@startuml ScalaPathController_Architecture
package "it.unibo.controller" {

    ' Main Controller Object
    class ScalaPathController <<object>> {
        +start(): Unit
        +assembleAgent(): Unit
        -resetSimulation(): Unit
        -step(): Unit
        -loop(previous: State): Unit
        -handleTransition(from: State, to: State): Unit
        -handleState(state: State): Unit
    }

    ' Core Traits
    interface DisplayableController <<trait>> {
    }

    interface SpeedManager <<trait>> {
        -_delay: Int
        -_speed: Double
        -_shouldSleep: Boolean
        +delay(): Unit
        +shouldSleep(): Unit
        #speed: Double
        #speed_=(newSpeed: Double): Unit
    }

    interface AgentManager <<trait>> {
        -_agent: Option[Agent]
        +agent: Option[Agent]
        +agent_=(agent: Agent): Unit
        #startSearch(): Unit
        #handleNoPlan(errorMessage: String): Unit
        #handleValidPlan(nMoves: Option[Int]): Unit
        #assembleAgent(): Unit
        #planOver: Boolean
        #resetAgent(): Unit
        #stepAgent(): Unit
        #dropAgent(): Unit
        #searchPlan(): Unit
    }

    interface ViewManager <<trait>> {
        -_view: Option[V]
        +attachView(v: V): Unit
        #exec(op: => Unit): Unit
        +view: Option[V]
    }

    ' Nested Traits in DisplayableController
    interface ScenarioManager <<trait>> {
        -scenarioMap: ListMap
        -_scenario: Scenario
        -_init: Position
        -_goal: Position
        +init: Position
        +goal: Position
        +scenarios: Seq[Scenario]
        +scenario: Scenario
        #generateScenario(): Unit
        #randomPosition: Position
    }

    interface AlgorithmManager <<trait>> {
        +algorithms: Seq[Algorithm]
        -_algorithm: Algorithm
        +algorithmsNames: Seq[String]
        +algorithm: Algorithm
        #algorithm_=(newAlgorithm: Algorithm): Unit
    }

    interface DirectionManager <<trait>> {
        -_directions: Seq[Direction]
        +directions: Seq[Direction]
        #directions_=(directions: Seq[Direction]): Unit
    }

    ' Simulation Object
    class Simulation <<object>> {
        -_current: State
        +current: State
        +set(s: State): Unit
        +exec(action: => Unit): Unit
    }

    ' Simulation States and Commands
    class ExecutionState <<enum>> {
        Running
        Paused
        Step
        Empty
    }

    enum UICommand {
        ChangeScenario
        ChangeAlgorithm
        DirectionsChoice
        SetPosition
        SetAnimationSpeed
        SetScenarioSize
    }

    enum SettablePosition {
        Init
        Goal
        +position: Position
    }

    ' View Manager Inner Object
    class ViewObject {
        +update(): Unit
        +disableControls(): Unit
        +pause(): Unit
        +firstStep(): Unit
        +resume(): Unit
        +reset(): Unit
        +over(): Unit
        +noPlanFound(msg: String): Unit
        +planFound(msg: String): Unit
        +search(): Unit
        +firstScenarioChoice(): Unit
    }

    ' Pattern Matching Objects
    class TransitionPatterns {
        +FirstStep: Boolean
        +ContinueStep: Boolean
        +Resume: Boolean
        +Pause: Boolean
        +FirstScenario: Boolean
        +Reset: Boolean
        +ChangeSpeed: Option
    }

    ' Relationships
    ScalaPathController ..|> DisplayableController
    ScalaPathController ..|> SpeedManager
    ScalaPathController ..|> AgentManager
    ScalaPathController ..|> ViewManager

    DisplayableController ..|> ScenarioManager
    DisplayableController ..|> AlgorithmManager
    DisplayableController ..|> DirectionManager
    DisplayableController ..|> AgentManager

    ScalaPathController --> Simulation : uses
    Simulation --> ExecutionState : contains
    Simulation --> UICommand : contains
    UICommand --> SettablePosition : uses

    ViewManager --> ViewObject : contains
    ScalaPathController --> ViewObject : uses
    ScalaPathController --> TransitionPatterns : pattern matching

    ' Notes
    note right of ScalaPathController
        Main controller object that orchestrates
        the entire pathfinding simulation.
        Uses trait composition for modularity.
    end note

    note bottom of Simulation
        Global state manager using
        synchronized access and
        state machine pattern
    end note

    note left of ViewManager
        Generic view manager with
        type parameter V
        Uses Swing EDT for thread safety
    end note
}

@enduml